--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .wrapper {
-    @apply mx-auto w-full max-w-7xl px-5 md:px-10;
+    @apply mx-auto w-full max-w-screen-2xl px-5 md:px-10;
   }
   .hidden-text {
     @apply absolute m-0 size-px overflow-hidden whitespace-nowrap border-none p-0 text-[2px] outline-none;
