design: header 컴포넌트 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,4 +10,10 @@
     @apply absolute m-0 size-px overflow-hidden whitespace-nowrap border-none p-0 text-[2px] outline-none;
     clip: rect(1px 1px 1px 1px);
   }
+  .scrollbar-hidden {
+    -ms-overflow-style: none;
+  }
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
 }
