design: 준비 중 페이지 추가 및 적용

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,9 @@
   .wrapper-xl {
     @apply mx-auto w-full max-w-screen-xl px-5 md:px-10;
   }
+  .py-screen {
+    @apply pb-[16vh] pt-[12vh];
+  }
   .hidden-text {
     @apply absolute m-0 size-px overflow-hidden whitespace-nowrap border-none p-0 text-[2px] outline-none;
     clip: rect(1px 1px 1px 1px);
